# da-tools

da-tools-33-add-an-exemple-with-quasi-geostrophic-equations/: README.rst  dev_environment.yaml  docs_environment.yaml  pyproject.toml  requirements.txt  setup.cfg
da-tools-33-add-an-exemple-with-quasi-geostrophic-equations/da_tools/observation/: operators.py
da-tools-33-add-an-exemple-with-quasi-geostrophic-equations/da_tools/probability/: distributions.py
da-tools-33-add-an-exemple-with-quasi-geostrophic-equations/da_tools/system/: state.py
da-tools-33-add-an-exemple-with-quasi-geostrophic-equations/da_tools/util/: data.py  initialization.py  mask.py  optimization.py  state_space.py  visualization.py
da-tools-33-add-an-exemple-with-quasi-geostrophic-equations/da_tools/variational/: base.py  hard_constraint_4dvar.py  weak_constraint_4dvar.py
da-tools-33-add-an-exemple-with-quasi-geostrophic-equations/docs/source/_templates/: custom-module.rst
da-tools-33-add-an-exemple-with-quasi-geostrophic-equations/notebooks/: 4D-Var_Lorenz63.ipynb  single_window_hc4dvar.ipynb  single_window_wc4dvar.ipynb  test_all_notebooks.py
da-tools-33-add-an-exemple-with-quasi-geostrophic-equations/notebooks/QG/: QGM.py
da-tools-33-add-an-exemple-with-quasi-geostrophic-equations/tests/: test_variational.py  test_wc4dvar_L96.py
da-tools-50/: dev_environment.yaml
da-tools-50/da_tools/observation/: data.py  operators.py
da-tools-50/da_tools/probability/: distributions.py
da-tools-50/da_tools/system/: state.py
da-tools-50/da_tools/util/: initialization.py  mask.py  optimization.py  visualization.py
da-tools-50/da_tools/variational/: base.py  hard_constraint_4dvar.py  weak_constraint_4dvar.py
da-tools-50/docs/source/: conf.py  index.rst
da-tools-50/docs/source/_templates/: custom-class.rst
da-tools-50/notebooks/: enkf_lorenz96.ipynb  gotm_single_window_4dvar.ipynb  single_window_hc4dvar.ipynb  single_window_wc4dvar.ipynb
da-tools-50/notebooks/GOTM/: data_gotm_nu_1d_sinking.pt
da-tools-50/notebooks/QG/: QGM.py
da-tools-50/tests/: test_variational.py  test_wc4dvar_L96.py
da-tools-55/: pyproject.toml  requirements.txt
da-tools-55/da_tools/ensemble/: enkf.py
da-tools-55/da_tools/observation/: data.py  operators.py
da-tools-55/da_tools/system/: state.py
da-tools-55/da_tools/util/: index.py  initialization.py  mask.py  state_space.py  typing.py
da-tools-55/da_tools/variational/: base.py
da-tools-55/docs/: requirements.txt
da-tools-55/notebooks/: 4D-Var_Lorenz63.ipynb  hc4dvar_quasi-geostrophic.ipynb  single_window_wc4dvar.ipynb
da-tools-55/notebooks/QG/: QGM.py
da-tools-55/tests/: test_4dvar_gotm.py  test_enkf.py  test_two_timescale_L96.py  test_variational.py  test_wc4dvar_L96.py
